--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 fedora/Fedora-Developer-Rawhide-20181015.n.0-sda.raw
 fedora/Fedora-Developer-Rawhide-20181015.n.0-sda.raw.xz
 fedora/rootfs.cpio
+br/buildroot-overlay/usr/darknet-nvdla/
+darknet-nvdla.tar.gz
