--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ test.log
 fedora/Fedora-Developer-Rawhide-20181015.n.0-sda.raw
 fedora/Fedora-Developer-Rawhide-20181015.n.0-sda.raw.xz
 fedora/rootfs.cpio
-darknet-nvdla.tar.gz
+workloads/darknet-nvdla/
 *__pycache__
 _command.sh
 .doit.db
