--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "br/buildroot"]
 	path = wlutil/br/buildroot
 	url = https://github.com/sifive/buildroot.git
+[submodule "nvdla"]
+	path = nvdla
+	url = https://github.com/nvdla/sw.git
